# sample_load_tests

./: README.md
k6/test_data/: users.js
k6/tests/: test_get_list_of_users.js
locust/: .gitignore  pyproject.toml
locust/settings/: settings.py
locust/tests/: test_get_list_of_users.py
